--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@angular/router": "^15.0.0",
     "@capacitor/android": "4.6.2",
     "@capacitor/app": "4.1.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.6.2",
+    "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/cli": "^6.20.8",
     "@ionic/pwa-elements": "^3.1.1",
+    "capacitor-voice-recorder": "^4.0.2",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
