--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/share": "^4.1.0",
+    "@capacitor/splash-screen": "^4.1.4",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/cli": "^6.20.8",
