--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -18,7 +18,9 @@ dependencies {
     implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
     implementation project(':capacitor-voice-recorder')
-
+    implementation "com.airbnb.android:lottie:4.2.1"
+    implementation "androidx.annotation:annotation:1.5.0"
+    implementation "androidx.appcompat:appcompat:1.3.0"
 }
 
 
