fixing icon and names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mystery-shopping-app",
+  "name": "incognito-insights",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
